argocd/manifests/horkos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: horkos
  namespace: horkos
spec:
  selector:
    app: horkos
  ports:
    - name: http
      port: 80
      targetPort: http
